update system within new funcitions